# cpplibtemplate

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/core/: CMakeLists.txt
examples/core/include/: examplecore.h
examples/core/source/: examplecore.cpp
examples/example_one/: CMakeLists.txt
examples/example_one/source/: main.cpp
lib/: CMakeLists.txt
lib/include/: mylib.h
lib/source/: mylib.cpp
